menambahkan tabel dan textarea

--- a/form.html
+++ b/form.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <form action="">
-        <label for="nama">Nama</label>
-        <input type="text" size="20" name="nama"><br>
-        <label for="alamat">Alamat</label>
-        <input type="text" size="40" name="alamat">
+        <table>
+            <tr>
+                <td><label for="nama">Nama</label></td>
+                <td><input type="text" size="20" name="nama"></td>
+            </tr>
+            <tr>
+                <td><label for="alamat">Alamat</label></td>
+                <td><input type="text" size="40" name="alamat"></td>
+            </tr>
+            <tr>
+                    <td><label for="pesan">Pesan</label></td>
+                    <td><textarea name="pesan" id="" cols="30" rows="10"></textarea></td>
+                </tr>
+        </table>
     </form>
 </body>
+
 </html>
