--- a/Latihan Membuat Website Sederhana/webnight/contact.html
+++ b/Latihan Membuat Website Sederhana/webnight/contact.html
@@ -52,8 +52,19 @@
     </div>
     <div id="contact">
         <div class="tengah">
-            <div class="te"></div>
-            <div class="te"></div>
+            <div class="te" style="padding-top:20px;margin-left:-30px;">
+                    <link rel="stylesheet" href="formoid_files/formoid1/formoid-biz-red.css" type="text/css" />
+                    <script type="text/javascript" src="formoid_files/formoid1/jquery.min.js"></script>
+                    <form class="formoid-biz-red" style="background-color:#1A2223;font-size:14px;font-family:'Open Sans','Helvetica Neue', 'Helvetica', Arial, Verdana, sans-serif;color:#ECECEC;max-width:450px;min-width:150px" method="post"><div class="title"><h2>Contact Us</h2></div>
+                        <div class="element-input"><label class="title"></label><input class="large" type="text" name="input" placeholder="Your Name"/></div>
+                        <div class="element-email"><label class="title"></label><input class="large" type="email" name="email" value="" placeholder="Your Email"/></div>
+                        <div class="element-input"><label class="title"></label><input class="large" type="text" name="input1" placeholder="Your Subject"/></div>
+                        <div class="element-textarea"><label class="title"></label><textarea class="small" name="textarea" cols="20" rows="5" placeholder="Your Message"></textarea></div>
+                    <div class="submit"><input type="submit" value="Sent"/></div></form><p class="frmd"><a href="http://formoid.com/v29.php">javascript form validation</a> Formoid.com 2.9</p><script type="text/javascript" src="formoid_files/formoid1/formoid-biz-red.js"></script>
+            </div>
+            <div class="te" style="float:right;padding:20px;">
+                    <iframe src="https://www.google.com/maps/d/embed?mid=1CMdDgH4GjfPW4TsNtK_rHgS79Q4" width="500" height="422"></iframe>
+            </div>
         </div>
     </div>
     <div style="clear:both;"></div>
