--- a/Latihan Membuat Website Sederhana/webnight/blog.html
+++ b/Latihan Membuat Website Sederhana/webnight/blog.html
@@ -88,10 +88,10 @@
                 </p>
                 <a href="http://asianwiki.com/Haruka_Ayase" style="text-decoration:none;color:#ecf0f1;padding:5px;background-color:#474955;border-radius:5px;">Read More</a>
             </div>
-            <div class="te">
+            <div class="te" style="float:right;padding:15px;">
                 <a class="twitter-timeline" data-height="200" data-dnt="true" href="https://twitter.com/Salman_416?ref_src=twsrc%5Etfw">Tweets by Salman_416</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <iframe width="400" height="480" src="https://www.youtube.com/embed/1tBlaVjWwbI" frameborder="0" gesture="media" allowfullscreen></iframe>
+                <iframe style="padding:5px;padding-top:5px;" width="400" height="480" src="https://www.youtube.com/embed/1tBlaVjWwbI" frameborder="0" gesture="media" allowfullscreen></iframe>
                 <script id="cid0020000170851073085" data-cfasync="false" async src="http://st.chatango.com/js/gz/emb.js" style="width: 250px;height: 350px;">{ "handle":"webnighte", "arch":"js", "styles":{ "a":"989898", "b":100, "c":"000000", "d":"000000", "k":"989898", "l":"989898", "m":"989898", "p":"10", "q":"989898", "r":100, "fwtickm":1 } }</script>
             </div>
         </div>
